Closed Bug 382441 Opened 17 years ago Closed 17 years ago

crash toggling threading [@ nsMsgDBView::ListIdsInThreadOrder]

Categories

(MailNews Core :: Backend, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tuukka.tolvanen, Assigned: mscott)

References

Details

Attachments

(2 files)

WARNING: NS_ENSURE_TRUE(e == nsnull) failed: file trunk/mozilla/mailnews/db/msgdb/src/nsMsgThread.cpp, line 881
###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../../dist/include/xpcom/nsCOMPtr.h, line 847

#5  <signal handler called>
No symbol table info available.
#6  0xb518f9a8 in nsMsgDBView::ListIdsInThreadOrder (this=0x883e238,
    threadHdr=0xaf46fa60, parentKey=7121739, level=1, viewIndex=0xbfb9a0f4,
    pNumListed=0xbfb9a138) at
    trunk/mozilla/mailnews/base/src/nsMsgDBView.cpp:4553
	rv = 0
	msgEnumerator = {mRawPtr = 0x0}
	numChildren = 5
	hasMore = -1253002028
	supports = {<nsCOMPtr_base> = {mRawPtr = 0x0}, <No data fields>}
	msgHdr = {mRawPtr = 0x0}
#7  0xb518faec in nsMsgDBView::ListIdsInThread (this=0x883e238,
    threadHdr=0xaf46fa60, startOfThreadViewIndex=7, pNumListed=0xbfb9a138) at
    trunk/mozilla/mailnews/base/src/nsMsgDBView.cpp:4603
	parentKey = 7121739
	i = 3216613644
	viewIndex = 8
	numChildren = 3037946068
#8  0xb519044e in nsMsgDBView::ExpandByIndex (this=0x883e238, index=7,
    pNumExpanded=0xbfb9a18c) at
    trunk/mozilla/mailnews/base/src/nsMsgDBView.cpp:4195
	flags = 1207959555
	firstIdInThread = 7121739
	rv = 0
	numExpanded = 0
	msgHdr = {mRawPtr = 0x9372df8}
	pThread = {mRawPtr = 0xaf46fa60}
#9  0xb51a3ec5 in nsMsgThreadedDBView::SortThreads (this=0x883e238,
    sortType=18, sortOrder=1) at
    trunk/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp:208
	numExpanded = 1
	flags = 1207959555
	j = 7
	numThreads = 1313
#10 0xb51a38bd in nsMsgThreadedDBView::Sort (this=0x883e238, sortType=18,
    sortOrder=1) at
    trunk/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp:350
	rv = 3036113003
	rowCountBeforeSort = 3351
	sortThreads = 1
	preservedKey = 511290372
	preservedSelection = {<nsUInt32Array> = {_vptr.nsUInt32Array =
    0xb54f5228, m_nSize = 0, m_nMaxSize = 0, m_nGrowBy = 0, m_pData = 0x0},
    <No data fields>}

str: in thread pane, click on threading toggle (leftmost column head)

http://bonsai.mozilla.org/cvsquery.cgi?date=explicit&mindate=2007-05-29+15:00&maxdate=2007-05-29+18:00
2007-05-29 15:19 scott%scott-macgregor.org
mozilla/mailnews/base/src/nsMsgGroupThread.cpp 1.11 2/4 Bug #379070 --> string
and code cleanup for nsIMsgThread Patch by Joerg Bornemann
Attached file backtrace
Severity: normal → critical
OS: Linux → All
Hardware: PC → All
Attached patch the fixSplinter Review
I just checked this fix in.
Assignee: nobody → mscott
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Summary: crash toggling threading [@ ListIdsInThreadOrder] → crash toggling threading [@ nsMsgDBView::ListIdsInThreadOrder]
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: