Bug #382441 -> crash toggling threading icon.

Fix NS_ENSURE_TRUE macro.